--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
     <!-- --------------- link logo ------------------- -->
     <link rel="shshortcut icon" href="/img/bpak_dt_1_1__00001-01.png">
+
+    <!-- ----------------------- link icons ----------------------------- -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- -------------- link css --------------------- -->
     <link rel="stylesheet" href="/css/loading_screen.css">
@@ -20,7 +23,13 @@
     <!-- -------------- link google fonts ------------------ -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet"> -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Pacifico&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -28,7 +37,7 @@
 
     <!-- loading screen -->
 
-    <div id="contaner_load">
+    <!-- <div id="contaner_load">
         <div class="img_load">
             <img src="/img/restaurent_v_001-01.png" alt="">
         </div>
@@ -37,19 +46,21 @@
                 <div class="line_boxx"></div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- ----------------------------------- navbar-------------------------- -->
     <header class="header">
         <a href="#" class="logo"> <img src="/img/restaurent_v_001-01.png" alt="logo"></a>
 
         <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Shop</a>
-            <a href="#">Blog</a>
-            <a href="#">Contect Us</a>
-            <a1 href="#" class="button">Sign in</a1>
+            <a href="#home" class="active">HOME</a>
+            <a href="#about">ABOUT</a>
+            <a href="#menu">MENU</a>
+            <a href="#ourchef">OUR CHEF</a>
+            <a href="#gallery">GALLERY</a>
+            <a href="#blog">BLOG</a>
+            <a href="#contect">CONTECT</a>
+            <a1 href="#" class="button">BOOK A TABLE</a1>
         </nav>
 
     </header>
@@ -61,11 +72,14 @@
     <section class="home" id="home">
 
         <div class="home_page">
-            <h4>Welcome to out</h4>
-            <h2>RESTAURENT</h2>
-            <p>THE BEST MULTI CUISINE RESTAURENT</p>
+            <h4>Delicious Food</h4>
+            <h2>Being The <span class="multiple_text"></span></h2>
+            <p>Tasty, delicious food ready in restaurant. We respect your test review.</p>
 
-            <a href="#" class="button">RESTAURANT</a>
+            <a href="#" class="button">LEARN MORE</a>
+        </div>
+        <div class="btn_bottom">
+            <a href="#about"><i class='bx bx-chevron-down'></i></a>
         </div>
 
     </section>
@@ -75,11 +89,54 @@
 
     </section>
 
+    <section class="menu" id="menu">
 
+    </section>
+
+    <section class="ourchef" id="ourchef">
+
+    </section>
+
+    <section class="gallery" id="gallery">
+
+    </section>
+
+    <section class="blog" id="blog">
+
+    </section>
+
+    <section class="contect" id="contect">
+
+    </section>
+
+
+
+
+
+    <footer class="footer_page">
+        <div class="footer_text_img">
+            <p>&copy; 2023 RESTAURANT POWERED BY : </p>
+            <a href="#"><img src="/img/restaurent_v_001-01.png" alt=""></a>
+        </div>
+        <div class="footer_socail">
+            <p>CONTECT US : </p>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class='bx bxl-youtube' ></i></a>
+            <a href="#"><i class='bx bxl-tiktok' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="#"><i class='bx bxl-telegram'></i></a>
+        </div>
+    </footer>
 
 
     <!-- ----------------------------------- script js ------------------------------ -->
     <script src="/js/button_ripple.js"></script>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    
+    <script src="/js/scroll_select_link.js"></script>
+    
     <script src="/js/loadinggg.js"></script>
 
 
