--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 
-    <!-- ----------------------------------- page ------------------------------------ -->
+    <!-- ----------------------------------- home page ------------------------------------ -->
 
     <section class="home" id="home">
 
@@ -85,26 +85,32 @@
     </section>
 
 
+    <!-- ----------------------------------- about page ------------------------------------ -->
     <section class="about" id="about">
 
     </section>
 
+    <!-- ----------------------------------- menu page ------------------------------------ -->
     <section class="menu" id="menu">
 
     </section>
 
+    <!-- ----------------------------------- our chef page ------------------------------------ -->
     <section class="ourchef" id="ourchef">
 
     </section>
 
+    <!-- ----------------------------------- gallery page ------------------------------------ -->
     <section class="gallery" id="gallery">
 
     </section>
 
+    <!-- ----------------------------------- blog page ------------------------------------ -->
     <section class="blog" id="blog">
 
     </section>
 
+    <!-- ----------------------------------- contect page ------------------------------------ -->
     <section class="contect" id="contect">
 
     </section>
