--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
             <a href="#contect">CONTECT</a>
             <a1 href="#" class="button">BOOK A TABLE</a1>
         </nav>
+        <div class="toggle_btn">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
+        <div class="dropdown_menu">
+            <a href="#home" class="active2">HOME</a>
+            <a href="#about">ABOUT</a>
+            <a href="#menu">MENU</a>
+            <a href="#ourchef">OUR CHEF</a>
+            <a href="#gallery">GALLERY</a>
+            <a href="#blog">BLOG</a>
+            <a href="#contect">CONTECT</a>
+            <a1 href="#" class="button">BOOK A TABLE</a1>
+        </div>
 
     </header>
 
@@ -141,7 +155,7 @@
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     
-    <script src="/js/scroll_select_link.js"></script>
+    <script src="/js/main.js"></script>
     
     <script src="/js/loadinggg.js"></script>
 
