--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <section class="home" id="home">
 
         <div class="home_page">
-            <h4>Delicious Food</h4>
+            <h4>___ Delicious Food</h4>
             <h2>Being The <span class="multiple_text"></span></h2>
             <p>Tasty, delicious food ready in restaurant. We respect your test review.</p>
 
@@ -101,6 +101,39 @@
 
     <!-- ----------------------------------- about page ------------------------------------ -->
     <section class="about" id="about">
+
+        <div class="ab_text_img">
+            <div class="ab_img">
+                <img src="/img/84569.jpg" alt="">
+            </div>
+            <div class="ab_text">
+                <h4>___ Unique story</h4>
+                <p>Restaurant food dolor sit amet, consectetur adipisicing elit, sed do eiusmod eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation Duis aute irure dolor in reprehenderit in voluptate.<br><br>Cafe ut perspiciatis unde omnis iste natus error sit voluptatem totam rem aperiam, eaque ipsa quae ab illo inventore veritatis dicta sunt explicabo.</p>
+                <a href="#" class="button">BOOK NOW</a>
+            </div>
+        </div>
+        <div class="ab_serivces">
+            <div class="ab_ser">
+                <i class="fa-solid fa-champagne-glasses"></i>
+                <h5>PRIVATE EVENTS</h5>
+                <p>We provide best and fresh quality foods. We also gives you required signature dishes.</p>
+            </div>
+            <div class="ab_ser">
+                <i class="fa-solid fa-utensils"></i>
+                <h5>DELICIOUS FOODS</h5>
+                <p>We provide best and fresh quality foods. We also gives you required signature dishes.</p>
+            </div>
+            <div class="ab_ser">
+                <i class='bx bx-food-menu'></i>
+                <h5>ONLINE ORDER</h5>
+                <p>We provide best and fresh quality foods. We also gives you required signature dishes.</p>
+            </div>
+            <div class="ab_ser">
+                <i class="fa-solid fa-truck"></i>
+                <h5>FREE DELIVERY</h5>
+                <p>We provide best and fresh quality foods. We also gives you required signature dishes.</p>
+            </div>
+        </div>
 
     </section>
 
