--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- -------------- link css --------------------- -->
     <link rel="stylesheet" href="/css/loading_screen.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/slides.css">
 
     <!-- -------------- link js --------------------- -->
     <!-- <script src="/js/filter2.js" defer></script> -->
@@ -64,7 +65,7 @@
             <a href="#ourchef">OUR CHEF</a>
             <a href="#gallery">GALLERY</a>
             <a href="#blog">BLOG</a>
-            <a href="#contect">CONTECT</a>
+            <a href="#contact">CONTACT</a>
             <a1 href="#" class="button">BOOK A TABLE</a1>
         </nav>
         <div class="toggle_btn">
@@ -78,7 +79,7 @@
             <a href="#ourchef">OUR CHEF</a>
             <a href="#gallery">GALLERY</a>
             <a href="#blog">BLOG</a>
-            <a href="#contect">CONTECT</a>
+            <a href="#contact">CONTECT</a>
             <a1 href="#" class="button">BOOK A TABLE</a1>
         </div>
 
@@ -92,10 +93,10 @@
 
         <div class="home_page">
             <h4>___ Delicious Food</h4>
-            <h2>Being The <span class="multiple_text"></span></h2>
+            <h2>Being The <span1 class="multiple_text"></span1></h2>
             <p>Tasty, delicious food ready in restaurant. We respect your test review.</p>
 
-            <a href="#" class="button">LEARN MORE</a>
+            <a href="#menu" class="button">LEARN MORE</a>
         </div>
         <div class="btn_bottom">
             <a href="#about"><i class='bx bx-chevron-down'></i></a>
@@ -312,33 +313,268 @@
     <!-- ----------------------------------- our chef page ------------------------------------ -->
     <section class="ourchef" id="ourchef">
 
+        <div class="top_ourchef">
+            <h4>___ Our expert</h4>
+            <h2>MEET OUR CHEF</h2>
+        </div>
+
+        <div class="slider">
+            <div class="list_slider">
+                <div class="item_slider activee">
+                    <div class="text_item">
+                        <h3>BROSSPICH</h3>
+                        <h6>EXECUTUVE CHEF</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.</p>
+                        <img src="/img/bp_kha.png">
+                    </div>
+                    <div class="img_item">
+                        <img src="/img/brosspichimg.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item_slider">
+                    <div class="text_item">
+                        <h3>VANNDIN</h3>
+                        <h6>EXECUTUVE CHEF</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.</p>
+                        <img src="/img/bp_kha.png">
+                    </div>
+                    <div class="img_item">
+                        <img src="/img/vandin.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item_slider">
+                    <div class="text_item">
+                        <h3>HAI</h3>
+                        <h6>EXECUTUVE CHEF</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.</p>
+                        <img src="/img/bp_kha.png">
+                    </div>
+                    <div class="img_item">
+                        <img src="/img/hai__001_01.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item_slider">
+                    <div class="text_item">
+                        <h3>YI</h3>
+                        <h6>EXECUTUVE CHEF</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.</p>
+                        <img src="/img/bp_kha.png">
+                    </div>
+                    <div class="img_item">
+                        <img src="/img/yi_pic.JPG" alt="">
+                    </div>
+                </div>
+                <div class="item_slider">
+                    <div class="text_item">
+                        <h3>PANNY</h3>
+                        <h6>EXECUTUVE CHEF</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Utenim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lara Croft.</p>
+                        <img src="/img/bp_kha.png">
+                    </div>
+                    <div class="img_item">
+                        <img src="/img/panny_pic.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="navigation_slider">
+                    <div class="btn_slider activee"></div>
+                    <div class="btn_slider"></div>
+                    <div class="btn_slider"></div>
+                    <div class="btn_slider"></div>
+                    <div class="btn_slider"></div>
+                </div>
+            </div>
+        </div>
+
+
     </section>
 
     <!-- ----------------------------------- gallery page ------------------------------------ -->
     <section class="gallery" id="gallery">
 
+        <div class="top_gallery">
+            <h4>___ Discover our popular dishes</h4>
+            <h2>FOOD GALLERY</h2>
+        </div>
+
+        <div class="item_galleryy">
+        <div class="item_gallery">
+            <div class="gallery_box">
+                <img src="/img/0001.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Bissell Breakfast</p>
+                </div>
+            </div>
+            
+            <div class="gallery_box">
+                <img src="/img/0002_2.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Francisco Benedictf</p>
+                </div>
+            </div>
+
+            <div class="gallery_box">
+                <img src="/img/0003_3.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Protein Breakfast</p>
+                </div>
+            </div>
+
+            <div class="gallery_box">
+                <img src="/img/0005_5.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Garden Salad</p>
+                </div>
+            </div>
+
+            <div class="gallery_box">
+                <img src="/img/0006_6.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Vegetarian Sandwich</p>
+                </div>
+            </div>
+
+            <div class="gallery_box">
+                <img src="/img/0007_7.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Grilled Zucchini</p>
+                </div>
+            </div>
+
+            <div class="gallery_box">
+                <img src="/img/0008_8.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Chicken With Pears</p>
+                </div>
+            </div>
+
+            <div class="gallery_box">
+                <img src="/img/0009_9.jpg" alt="">
+                <div class="gallery_layer">
+                    <i class='bx bx-search'></i>
+                    <p>Broccoli Balls</p>
+                </div>
+            </div>
+
+        </div>
+        </div>
+
+        <div class="botton_gallery">
+            <h4>___ Testimonials</h4>
+            <h2>WHAT OUR CUSTOMERS SAY</h2>
+            <h1>"</h1>
+            <p>Laudantium, oloremquetotam rem aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem Nemo enim ipsam voluptatem Nemo enim ipsam voluptatem.<br><br>By:<br><br><h4>BROSSPICH , VANNDIN , HAI , YI and PANNY</h4>
+            </p>
+            <!-- <h1>"</h1> -->
+        </div>
+
     </section>
 
     <!-- ----------------------------------- blog page ------------------------------------ -->
     <section class="blog" id="blog">
+        <div class="top_blog">
+            <h4>___ Latest news</h4>
+            <h2>OUR BLOG</h2>
+        </div>
+
+        <div class="con_blog">
+        <div class="contan_blog">
+            <div class="box_blog">
+                <img src="/img/couple1.jpg" alt="">
+                <a href="#">Couple Having Dinner</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                <a href="#">Read More</a>
+            </div>
+
+            <div class="box_blog">
+                <img src="/img/merlin1.jpg" alt="">
+                <a href="#">The Bext Foods</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                <a href="#">Read More</a>
+            </div>
+
+            <div class="box_blog">
+                <img src="/img/cover_pexels1.jpg" alt="">
+                <a href="#">Working In The Chickin</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                <a href="#">Read More</a>
+            </div>
+        </div>
+        </div>
+
+        <div class="botton_blog">
+            <h4>We also provide catering services</h4>
+            <div class="p_b_blog">
+            <p>We provide best and fresh quality foods. We also gives you required signature dishes.</p>
+            </div>
+            <a href="#" class="button">BOOK SERVICES</a>
+        </div>
 
     </section>
 
     <!-- ----------------------------------- contect page ------------------------------------ -->
-    <section class="contect" id="contect">
+    <section class="contact" id="contact">
+
+        <div class="top_contact">
+            <h4>___ Location Time & Socail Media</h4>
+            <h2>OUR CONTACT</h2>
+        </div>
+        <div class="location_map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1821.7870128411669!2d104.87676768692239!3d11.565490813172476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951bda7605819%3A0x486ccc7172c58a93!2sNational%20Institute%20of%20Enterpreneurship%20and%20Innovation!5e0!3m2!1sen!2skh!4v1704473986073!5m2!1sen!2skh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="text_contact">
+            <div class="text_contact1">
+                <h3>Address</h3>
+                <p>Russian Blvd, Touk Thla,<br>Phnom Penh, Cambodia.</p>
+            </div>
+            <div class="text_contact2">
+                <h3>Timing</h3>
+                <p>Monday - Friday 7:00 AM - 5:00 PM<br>Saturday - Sunday Closed</p>
+            </div>
+            <div class="text_contact3">
+                <h3>Contact</h3>
+                <p>(+855)23 642 4499<br>niei.tvet@gmail.com</p>
+            </div>
+        </div>
+        <div class="color_botton_contact">
+            <div class="botton_contact">
+                <h4>CONTECT US : </h4>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class='bx bxl-youtube' ></i></a>
+                <a href="#"><i class='bx bxl-tiktok' ></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class='bx bxl-telegram'></i></a>
+            </div>
+        </div>
 
     </section>
 
 
 
 
-
+    <!-- ----------------------------------- contect page ------------------------------------ -->
     <footer class="footer_page">
         <div class="footer_text_img">
-            <p>&copy; 2023 RESTAURANT POWERED BY : </p>
-            <a href="#"><img src="/img/restaurent_v_002-01.png" alt=""></a>
+            <p>2023 &copy; RESTAURANT POWERED BY : </p>
+            <a href="#"><span>BROSSPICH</span></a>
+            <p> X </p>
+            <a href="#"><span>VANNDIN</span></a>
+            <p> X </p>
+            <a href="#"><span>HAI</span></a>
+            <p> X </p>
+            <a href="#"><span>YI</span></a>
+            <p> X </p>
+            <a href="#"><span>PANNY</span></a>
         </div>
-        <div class="footer_socail">
+        <!-- <div class="footer_socail">
             <p>CONTECT US : </p>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class='bx bxl-youtube' ></i></a>
@@ -346,13 +582,15 @@
             <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
             <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class='bx bxl-telegram'></i></a>
-        </div>
+        </div> -->
     </footer>
 
 
     <!-- ----------------------------------- script js ------------------------------ -->
 
     <!-- <script src="/js/filter.js"></script> -->
+
+    <script src="/js/slider.js"></script>
 
     <script src="/js/button_ripple.js"></script>
 
