--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="#gallery">GALLERY</a>
             <a href="#blog">BLOG</a>
             <a href="#contact">CONTACT</a>
-            <a1 href="#" class="button">BOOK A TABLE</a1>
+            <a1 href="/page/form_book.html" class="button">BOOK A TABLE</a1>
         </nav>
         <div class="toggle_btn">
             <i class="fa-solid fa-bars"></i>
@@ -80,7 +80,7 @@
             <a href="#gallery">GALLERY</a>
             <a href="#blog">BLOG</a>
             <a href="#contact">CONTECT</a>
-            <a1 href="#" class="button">BOOK A TABLE</a1>
+            <a1 href="/page/form_book.html" class="button">BOOK A TABLE</a1>
         </div>
 
     </header>
@@ -514,7 +514,7 @@
             <div class="p_b_blog">
             <p>We provide best and fresh quality foods. We also gives you required signature dishes.</p>
             </div>
-            <a href="#" class="button">BOOK SERVICES</a>
+            <a href="/page/form_book.html" class="button">BOOK SERVICES</a>
         </div>
 
     </section>
